syntax = "proto3";

package com.road.yishi.proto.item;

message ItemSellReqMsg {
  repeated int32 selledItemInfos = 1;
}
